Check for null explicitly where a non-null result or argument is promised